# linkiguess

./: .gitignore  README.md  domains.txt
env/: build.sh  down.sh  tls-init.sh  up.sh
env/grafana/: dashboard.yaml
env/kube/: analytic-service-deps.yml  analytic-service.yml  backend-service.yml  frontend-service.yml  infra.yml  lb.yml  purger-service.yml  secrets.yml  short-service-deps.yml  short-service.yml
env/play/: analytic-service-deps.sh  analytic-service.sh  backend-service.sh  frontend-service.sh  infra.sh  lb.sh  purger-service.sh  secrets.sh  short-service-deps.sh  short-service.sh
env/sh/: analytic.sh  backend.sh  purger.sh  short-pg.sh  short.sh
source/analytic-service/: Cargo.toml
source/analytic-service/src/: app.rs  config.rs  constants.rs
source/backend-service/: Cargo.toml  Dockerfile
source/backend-service/src/: app.rs  config.rs  constants.rs  log.rs  main.rs
source/frontend-service/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
source/frontend-service/src/: App.vue
source/purger-service/: Cargo.toml
source/purger-service/src/: app.rs  config.rs  constants.rs  log.rs  main.rs
source/short-service/: Cargo.toml
source/short-service-db/dev/: insert-link.sh
source/short-service-db/init/: init.sql
source/short-service/src/: app.rs  config.rs  constants.rs  log.rs  main.rs
